--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -24,7 +24,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: "app"
+        working-directory: "frontend"
     permissions:
       contents: read
       security-events: write
