--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,5 +41,9 @@
     "react-test-renderer": "18.2.0",
     "typescript": "^4.9.4"
   },
-  "private": true
+  "private": true,
+  "eslintIgnore": [
+    "babel.config.js",
+    ".eslintrc.js"
+  ]
 }
