--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,12 +12,15 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
     "@types/react-navigation": "^3.4.0",
+    "axios": "^1.3.4",
     "expo": "~48.0.9",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.71.4",
+    "react-native": "0.71.6",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "^2.9.0",
+    "react-native-safe-area-context": "^4.5.0",
     "react-native-web": "~0.18.10"
   },
   "devDependencies": {
