--- a/backend/uwsgi.ini
+++ b/backend/uwsgi.ini
@@ -1,4 +1,10 @@
 [uwsgi]
 chdir = /app
 module = scorecard.wsgi:application
-env = DJANGO_SETTINGS_MODULE=scorecard.settings
+env = DJANGO_SETTINGS_MODULE=scorecard.settings.production
+master = true
+processes = 4
+threads = 2
+http-timeout = 86400
+vacuum = true
+die-on-term = true
