--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,13 +1,23 @@
 # Use the official Python base image
 FROM python:3.9
 
+# Set the working directory
 WORKDIR /app
 
-COPY Pipfile /app
-COPY Pipfile.lock /app
+# Copy requirements.txt
+COPY requirements.txt .
 
-RUN pip install pipenv && \
-    pipenv install --deploy --system
+# Install dependencies
+RUN pip install --no-cache-dir -r requirements.txt
 
-COPY . /app
-CMD ["uwsgi", "--http", ":8000", "--ini", "uwsgi.ini"]
+# Copy the rest of the project files
+COPY . .
+
+# Set environment variables
+ENV DJANGO_SETTINGS_MODULE=scorecard.settings.production
+
+# Expose the Gunicorn port
+EXPOSE 8000
+
+# Run Gunicorn
+CMD ["gunicorn", "--bind", "0.0.0.0:8000", "--workers", "3", "scorecard.wsgi:application"]
