--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,8 @@
     "react-native": "0.71.7",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "^2.9.0",
-    "react-native-safe-area-context": "^4.5.0",
+    "react-native-paper": "^5.7.2",
+    "react-native-safe-area-context": "4.5.0",
     "react-native-web": "~0.18.10"
   },
   "devDependencies": {
