--- a/frontend/app.json
+++ b/frontend/app.json
@@ -27,6 +27,14 @@
     "web": {
       "bundler": "metro",
       "favicon": "./assets/images/favicon.png"
-    }
+    },
+    "plugins": [
+      [
+        "expo-document-picker",
+        {
+          "iCloudContainerEnvironment": "production"
+        }
+      ]
+    ]
   }
 }
