--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@types/react-navigation": "^3.4.0",
     "axios": "^1.3.4",
     "expo": "~48.0.9",
+    "expo-document-picker": "^11.2.2",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
